--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <a href="/JoyeuxHalloween.html"><h1>Souhaitez-moi un Joyeux Halloween</h1></a>
+    <a href="/HappyHalloween.html"><h1>Wish me Happy Halloween</h1></a>
 </body>
 </html>
