--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="/FelizHalloween.html"><h1>Deséame un Feliz Halloween</h1></a>
     <a href="/BionHalloween.html"><h1>Augurami un Felice Halloween</h1></a>
     <a href="/FelizDiaDasBruxas.html"><h1>Me deseje um feliz dia das bruxas</h1></a>
+    <a href="/FröhlichesHalloween.html"><h1>Wünsche mir ein frohes Halloween</h1></a>
 </body>
 </html>
