--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <a href="/BionHalloween.html"><h1>Augurami un Felice Halloween</h1></a>
     <a href="/FelizDiaDasBruxas.html"><h1>Me deseje um feliz dia das bruxas</h1></a>
     <a href="/FröhlichesHalloween.html"><h1>Wünsche mir ein frohes Halloween</h1></a>
+    <a href="/WesołegoHalloween.html"><h1>życzę mi szczęśliwego halloween</h1></a>
 </body>
 </html>
