Ajout Version Finlandaise

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <a href="/HappyHalloween.html"><h1>Wish me Happy Halloween</h1></a>
     <a href="/FelizHalloween.html"><h1>Deséame un Feliz Halloween</h1></a>
     <a href="/СчастливогоХэллоуина.html"><h1>пожелай мне хорошего хэллоуина</h1></a>
+    <a href="/FijneHalloween.html"><h1>wens me een gelukkig halloween</h1></a>
 </body>
 </html>
