--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="/FelizDiaDasBruxas.html"><h1>Me deseje um feliz dia das bruxas</h1></a>
     <a href="/FröhlichesHalloween.html"><h1>Wünsche mir ein frohes Halloween</h1></a>
     <a href="/WesołegoHalloween.html"><h1>życzę mi szczęśliwego halloween</h1></a>
+    <a href="/СрећноНоћВештица.html"><h1>пожели ми срећну ноћ вештица</h1></a>
 </body>
 </html>
